Fix grid-columns overflowing sidebar

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -28,7 +28,7 @@
   list-style: none;
   position: relative;
   border-radius: var(--layout-border-radius-small);
-  max-width: calc(100vw - 20px);
+  max-width: min(100%, calc(100vw - 20px));
   box-shadow: var(--card-box-shadow, var(--box-shadow-m));
   clear: both;
   contain: style layout; // Improve performance
